 (Format: Year/Month/Day)
Changes for 1.0rc3:
*06/07/10:
   * Next/PrevWindow toolbar buttons break MouseFocus: bug #1519913 (Mark)
     WorkspaceCmd.cc FocusControl.cc
*06/07/08:
   * Fix implementation of _NET_MOVERESIZE_WINDOW (Mark)
     Ewmh.cc
*06/07/06:
   * Fixed bug #1069909, Incorrect window dimensions (Henrik)
     It created strut even if it didnt have any clients
     Slit.cc
   * Fixed bug #1491571, Round corners badly rendered (Henrik)
     Update shape in FbWinFrame after a shade()
     FbWinFrame.cc
   * Changing between internal and external tabs didn't affect iconified
     windows (Mark)
     Screen.cc
   * Still trying to get the focus right: bug #1517750 (Mark)
     FocusControl.cc Window.cc Screen.cc
*06/07/05:
   * Fix crash on startup on some platforms (Simon)
     FbTk/FbString.cc
*06/07/04:
   * Fix some sizing issues from gravity change patch (Simon)
     FbWinFrame.hh/cc Window.cc
   * Auto-grouped windows using groups file didn't raise (Thanks ac2dc, bug
     #1449608)
     Workspace.cc
   * New windows don't steal focus from fullscreen windows; instead, flash the
     titlebar and iconbar button (Mark)
     Window.cc
*06/07/03:
   * fix+improve handling of window gravity, was very broken (Simon)
     - caused (among others) windows with gravity set to get relocated 
       on close.
     - gravity is now taken into account on style change
     FbWinFrame.hh/cc Window.hh/cc Ewmh.cc
   * make our default locale, init, menu, and style paths properly
     expand PREFIX in the make install stage, so that make prefix=elsewhere
     works properly (Simon)
     configure.in
Changes for 1.0rc2:
*06/07/03:
   * call waitpid() on SIGCHLD until no more children (thanks Devin/dlab)
     sf.net #1514843, #1447782 - fluxbox leaves zombies
     fluxbox.cc
*06/07/02:
   * Updated documentation (Mark)
*06/06/29:
   * Make fbsetroot set one screen at a time (Mark)
     util/fbsetroot.cc/hh
   * Fix fbsetroot segfault when DISPLAY is unset (Mark)